syntax = "proto3";

package greet.v1;

option go_package= "bitbucket.com/mightnvi/grpc-go-ex/server/proto";
option java_package = "bitbucket.com.mightnvi.grpcgoex";

import "google/protobuf/timestamp.proto";

message GreetRequest {
  string name = 1;
  string title = 2;
}

message GreetResponse {
  string message = 1;
  optional int32 char_length = 2;
  google.protobuf.Timestamp current_time = 3;
}

service GreetService {
  rpc GreetUnary(GreetRequest) returns (GreetResponse); //unary
  rpc GreetClientStream(stream GreetRequest) returns (GreetResponse); //client stream
  rpc GreetServiceStream(GreetRequest) returns (stream GreetResponse); //server stream
  rpc GreetBidirectional(stream GreetRequest) returns (stream GreetResponse); //bidirectional stream
}